--- a/site/assets/less/flexi_containers_rtl.less
+++ b/site/assets/less/flexi_containers_rtl.less
@@ -483,10 +483,12 @@ body .fc-nowrap-box,
 	margin-top: 0;
 	margin-bottom: 12px;
 	margin-left: 12px;
+	display: inline-block;
 }
 #flexicontent .fc-xpended-btns {
 	margin: 0 0 8px 0 !important;
 	float: none;
+	display: inline-block;
 }
 #flexicontent .fc-xpended-row {
 	box-sizing: border-box;
